--- a/css/style.css
+++ b/css/style.css
@@ -273,16 +273,15 @@ and (max-device-width:1200px)
     }
 
     .benefit ul {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
+        margin:auto;
     }
 
     section.right {
-        width: 100%;
+        width: fit-content;
         height:auto;
-        margin:0;
+        margin:auto;
         padding:2.5em 15px;
+        
         /* margin:0;
         padding:0; */
     }
