--- a/css/style.css
+++ b/css/style.css
@@ -208,6 +208,7 @@ input[type=text], input[type=password]{
 }
 
 .sign-up-form select{
+    -webkit-appearance: none;
     display: block;
     margin: 0 0 1.5em 0;
     background-color: var(--grey-1);
