--- a/css/style.css
+++ b/css/style.css
@@ -253,8 +253,8 @@ button:hover{
 }
 
 @media only screen 
-and (min-device-width:481px)
-and (max-device-width:1200px)
+and (min-width:481px)
+and (max-width:1200px)
 {
     .container{
         display:flex;
@@ -297,8 +297,8 @@ and (max-device-width:1200px)
 }
 
 @media only screen 
-and (min-device-width:0px)
-and (max-device-width:480px)
+and (min-width:0px)
+and (max-width:480px)
 {
     .container{
         display:flex;
